added the band members section

--- a/index.html
+++ b/index.html
@@ -48,5 +48,50 @@
         </div>
 
     </div>
+    <div class="boxed">
+        <h1>Members</h1>
+        <div class="article">
+            <div class="spacing">
+                <img src="images/Dan-Reynolds.jpg" height="300" width="250" alt="Dan Reynold's photo">
+                <p>
+                    <a href="https://en.wikipedia.org/wiki/Dan_Reynolds_(singer)"><strong>Dan Reynold</strong></a>:<em>Singer.</em><br><br>
+                    He is an American singer, songwriter, and record producer. He is the lead vocalist and only remaining original member of the Imagine Dragons band.
+                    He is a recipient of the <em>Songwriters Hall of Fame Hal David Starlight Award.</em></p>
+                </p>
+            </div>
+            <div class="spacing">
+                <img src="images/Wayne_Sermon.jpg" height="300" width="250" alt="Wayne Sermon's photo">
+                <p>
+                    <a href="https://en.wikipedia.org/wiki/Wayne_Sermon"><strong>Wayne Sermon</strong></a>:<em>Guitarist.</em><br><br>
+                    He is an American musician, songwriter, and record producer. He is the lead guitarist for the Imagine Dragons band. 
+                    As a youth Sermon learned to play both cello and guitar. He was determined to be a guitarist even as a child. 
+                    His dad had an audio-phile quality amplifier, a record player, 
+                    and all of The <em>Beatles</em> albums on vinyl, which Sermon enjoyed listening to.
+                </p>
+
+            </div>
+            <div class="spacing">
+                <img src="images/ben-mcee.jpg" height="300" width="250" alt="Ben Mckee's photo">
+                <p>
+                    <a href="https://en.wikipedia.org/wiki/Ben_McKee"><strong>Ben Mkcee</strong></a>:<em>Bass.</em><br><br>He is an American musician,
+                     songwriter, and record producer. He is the bassist for the pop rock band Imagine Dragons. 
+                     He grew up playing acoustic guitar and violin, before picking up acoustic bass in fifth grade. In high school, 
+                     he continued learning bass guitar as a member of a jazz trio, which influenced his decision to attend <em>Berklee College of Music</em>.
+                </p>
+
+
+            </div>
+            <div class="spacing">
+                <img src="images/Daniel-Platzman.jpg" height="300" width="250" alt="Daniel Platzman's photo">
+                <p>
+                    <a href="https://en.wikipedia.org/wiki/Daniel_Platzman"><strong>Daniel Platzman</strong></a>:<em>Drumist.</em><br><br>
+                    He is an American musician, songwriter, record producer and composer. He is the drummer for the Imagine Dragons band.
+                    He attended <em>Berklee College of Music</em> where he earned a degree in film scoring. While at Berklee, Platzman played in the <em>Concert Jazz Orchestra</em>, 
+                    the <em>Urban Outreach Jazz Orchestra</em> and the <em>Berklee Rainbow Big Band</em>, and received the <em>Vic Firth Award</em> for Outstanding Musicianship
+                </p>
+
+            </div>
+        </div>
+    </div>
 </body>
 </html>
