added to gh-pages

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             </div>
         </div>
     </div>
-    <footer>
+    <footer class="foot">
         <p>Designed by: <strong>Fredrick Wambua Musyoki</strong>, <em>2021</em>.</p>
     </footer>
 </body>
