removed 'hr' tag on h2(favorite)  and added on h2(members)

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <h2>Favorite songs</h2>
                 <p>These are some of the best songs from various albums. Sucker for pain having been used as a sound track
                 movie <strong>Suicide Squad</strong>.
-                </p><hr>
+                </p>
         
                 <ul class="overflow">
                     <li><a href="https://youtu.be/7wtfhZwyrcc" target="_blank">Believer</a></li>
@@ -49,7 +49,7 @@
 
     </div>
     <div class="boxed">
-        <h1>Members</h1>
+        <h1>Members</h1><hr>
         <div class="article">
             <div class="spacing">
                 <img src="images/Dan-Reynolds.jpg" height="300" width="250" alt="Dan Reynold's photo">
